cscsite/assets/css/style.css
h1.bigger-margin {
  margin-top: 40px !important;
  margin-bottom: 20px !important;
}

h4.bigger-margin {
  margin-top: 20px !important;
  margin-bottom: 20px !important;
}

.container {
  width: 960px !important;
}

.logo-cell {
  position: relative;
  margin-left: 25px;
  width: 80px;
  float: left;
  height: 40px;
}

.logo-container {
  position: absolute;
  z-index: 1000;
}

.header.lvl1 {
  width: 100%;
  height: 40px;
  /* background-color: #2A2A2A; */
  background-color: #262626;
  color: white;
}

.header-lvl2-container {
  position: relative;
  height: 40px;
  margin-bottom: 20px;
}

.header.lvl2 {
  width: 100%;
  height: 40px;
  color: white;
  display: none;
  position: absolute;
  z-index: -1;
}

.header.lvl2.current {
  display: block;
  z-index: 100;
}

.header ul {
  padding-left: 0px;
}

.header a {
  color: white;
}

.header a:hover {
  decoration: none;
}

.header li {
  list-style: none;
  float: left;
  line-height: 40px;
  padding: 0px 15px;
  font-family: sans-serif;
  font-weight: bolder;
  cursor: pointer;
}

.header.lvl2 {
  background-color: #3F3F3F;
}
.header li:hover {
  background-color: #2F2F2F;
}
.header li.current {
  background-color: #222222; !important
}

.header.lvl2.for-students {
  background-color: #1C42A3;
}
li.for-students.current {
  background-color: #0C2A74 !important;
}
.header.for-students li:hover {
  background-color: #2C52B3;
}
.header.for-students li.current {
  background-color: #0C2A74 !important;
}

.header.lvl2.for-teachers {
  background-color: #8657AB;
}
li.for-teachers.current {
  background-color: #561788 !important;
}
.header.for-teachers li:hover {
  background-color: #9667BB;
}
.header.for-teachers li.current {
  background-color: #561788 !important;
}

.header.lvl2.for-staff {
  background-color: #C73827;
}
.header.for-staff li:hover {
  background-color: #EE8C80
}
.header.for-staff li.current {
  background-color: #E75847 !important;
}

.header li i {
  font-weight: normal;
}

.header .badge {
  background-color: transparent;
  border: 1px solid white;
}

.header .login {
  line-height: 40px;
  font-family: sans-serif;
  font-weight: bolder;
  text-align: right;
}

.header .login .logout-url {
  font-weight: normal;
}

.footer {
  background-color: #E6E6E6;
  border-top: 2px solid #9B9B9B;
  line-height: 55px;
  color: #9B9B9B;
  margin-top: 75px;
}

.footer .social {
  background-color: #EDEDED;
  text-align: justify;
}

.footer .social a {
  width: 20%;
  display: block;
  float: left;
  text-align: center;
  color: #9B9B9B;
}

.footer .social a:hover {
  color: #777;
}

.footer .social i {
  vertical-align: middle;
}

.news-metainfo {
  color: #AAA;
  text-align: right;
}

.index-image-container {
  margin-top: -60px;
  width: 980px;
  /* height: 380px; */
  background-image:url();
  border-bottom: 2px solid #9B9B9B;
}

.callout h1 {
  margin-top: 50px;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 5px;
  text-align: justify;
}

.callout p {
  background-color: rgba(255, 255, 255, 0.5);
  padding: 5px;
  font-weight: 200;
  font-size: 23px;
}

.callout-buttons {
  text-align: right;
}

.callout-buttons button {
  margin: 30px 15px;
}

.index-news {
  padding-left: 0px;
}

.index-news li {
  position: relative;
  list-style: none;
}

.index-news span.date {
  position: absolute;
  margin-left: -160px;
  padding-right: 10px;
  width: 160px;
  text-align: right;
  font-size: 18px;
  color: #B5B5B5;
}

.supported-by li {
  list-style: none;
  display: block;
  float: left;
  width: 150px;
  margin: 10px;
  color: black;
}

.supported-by img {
  clear: both;
}

.user-tile {
  width: 450px;
  margin: 10px;
  float: left;
}

.user-tile img {
  float: left;
}

.user-tile .user-info {
  float: left;
  padding: 10px;
  width: 350px;
}

.user-tile .user-info h4 {
  margin-top: 0px;
}

.timetable .badge {
  color: black;
  border: 1px solid #858585;
  font-weight: normal;
  border-radius: 5px;
}

.timetable .badge.lecture {
  background-color: #F9F9F9;
}

.timetable .badge.seminar {
  background-color: #E9E9E9;
}

.timetable-header-row .center {
  text-align: center;
}

.timetable-header-row .center h2 {
  margin: 0px;
}

.timetable-main-row h4 {
  margin-top: 40px;
}

.center-aligned {
  text-align: center;
}

.h2-and-buttons h2 {
  float: left;
}

.h2-and-buttons .btn-toolbar {
  float: right;
  margin-top: 20px;
}

/* .h2-and-buttons button { */
/*   float: right; */
/*   margin-left: 10px; */
/* } */

/* .h2-and-buttons a.btn { */
/*   margin-top: 20px; */
/* } */

.h2-and-buttons hr {
  clear: both;
}

